Arreglo de Vistas
mejoras en algunas vistas

--- a/UNAirlines2.0/grails-app/assets/stylesheets/skeleton.css
+++ b/UNAirlines2.0/grails-app/assets/stylesheets/skeleton.css
@@ -204,6 +204,7 @@
 	  display: block;
 	  overflow: hidden;
 	  visibility: hidden;
+          margin-left: 10em;
 	  width: 0;
 	  height: 0; }
 	.row:after,
