--- a/UNAirlines2.0/grails-app/assets/stylesheets/main.css
+++ b/UNAirlines2.0/grails-app/assets/stylesheets/main.css
@@ -115,7 +115,7 @@ a:focus {
 }
 
 body > section {
-  padding: 10px 0;
+  padding: 70px 0;
 }
 
 .center {
@@ -1343,7 +1343,7 @@ ul.social_icons li  a i{
  }
 
 .team-bar .second-arrow .fa-angle-down {
-  background:#000;
+  background:#6AA42F;
   margin-left: -33px;
 }
 
@@ -1681,8 +1681,17 @@ ul.social_icons li  a i{
 }
 
 .plan {
-  position: relative;
+  
+  margin-left: 30em ;
   margin-bottom: 70px;
+  position: relative;
+  
+}
+.plan1 {
+  
+  margin-left: 38.5em ;
+  
+  
 }
 
 .pricing-area ul {
